<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <FrameLayout
                android:id="@+id/content_frame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.0"
                    android:visibility="gone" />

                <RadioGroup
                    android:id="@id/main_radio"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:background="@color/dashboard_actionbar"
                    android:gravity="bottom"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@id/radio_button0"
                        style="@style/main_tab_bottom"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/ic_home"
                        android:text="@string/hotel"
                      
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@id/radio_button1"
                        style="@style/main_tab_bottom"
                        android:layout_marginTop="2.0dip"
                        android:drawableTop="@drawable/ic_about"
                        android:text="@string/about"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@id/radio_button2"
                        style="@style/main_tab_bottom"
                        android:layout_marginTop="2.0dip"
                        android:drawableTop="@drawable/ic_book"
                        android:text="@string/booknowtitle"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@id/radio_button3"
                        style="@style/main_tab_bottom"
                        android:layout_marginTop="2.0dip"
                        android:drawableTop="@drawable/ic_envelope"
                        android:text="@string/contact"
                        android:textColor="@color/white" />

                    <!--
                         <RadioButton
                        android:id="@id/radio_button3"
                        style="@style/main_tab_bottom"
                        android:layout_marginTop="2.0dip"
                        android:drawableTop="@drawable/ic_envelope"
                          android:textColor="@color/white"
                        android:text="@string/contact" />
                    -->

                    <RadioButton
                        android:id="@id/radio_button4"
                        style="@style/main_tab_bottom"
                        android:layout_marginTop="2.0dip"
                        android:drawableTop="@drawable/ic_cityplus"
                        android:text="@string/cityplus"
                        android:textColor="@color/white" />
                </RadioGroup>
            </LinearLayout>
        </TabHost>

        <!-- drawer top layout -->

        <RelativeLayout
            android:id="@+id/relativeDrawer"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/userContent"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@color/white"
                android:gravity="center_vertical" >

                <RelativeLayout
                    android:id="@+id/userDrawer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white" >

                    <ImageView
                        android:id="@+id/ImgDrawer"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/app_name"
                        android:gravity="center"
                        android:src="@drawable/ic_logo" />

                    <!--
                    <RelativeLayout
                        style="@style/textView_title_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true" >

                        <TextView
                            android:id="@+id/txt_user_name_drawer"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textAllCaps="true"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/txt_user_lastname_drawer"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/txt_user_name_drawer"
                            android:text="@string/app_name"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </RelativeLayout>
                    -->
                </RelativeLayout>
            </LinearLayout>

            <View
                android:id="@+id/viewSeparator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/userContent"
                android:background="@color/listviewline" />

            <ListView
                android:id="@+id/listDrawer"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/viewSeparator"
                android:layout_gravity="start"
                android:background="@color/white"
                android:cacheColorHint="@color/transparent"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="1dp" />
        </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>